<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_put_note"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.gmail.francoluigi95.taskAndroid.ModifyActivity">


    <TextView
        android:id="@+id/lblUsername2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text"
        android:layout_alignParentLeft="true" android:gravity="start"
        android:text="@string/date" />


    <TextView
        android:id="@+id/lblUsername6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/autocomplete_title"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-79dp"
        android:layout_alignParentLeft="true" android:gravity="start"
        android:text="@string/title" />

    <TextView
        android:id="@+id/lblUsername5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/autocomplete_title"
        android:layout_alignParentLeft="true" android:gravity="start"
        android:text="@string/text" />


    <EditText
        android:id="@+id/text"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblUsername5"
        android:layout_alignParentLeft="true" android:hint="@string/inputText"
        android:inputType="" android:text="" />

    <EditText
        android:id="@+id/data"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblUsername2"
        android:layout_alignParentLeft="true" android:hint="@string/inputDate"
        android:inputType="date" />

    <TextView
        android:id="@+id/info"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/insertModify"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/task"
        android:layout_width="307dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="153dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonModify"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:enabled="true"
        android:onClick="goput"
        android:text="@string/modifyTask" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_title"

        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="79dp"
        android:textSize="24sp"
        tools:layout_conversion_absoluteHeight="53dp"
        tools:layout_conversion_absoluteWidth="21dp" />



</RelativeLayout>


